# thun.ai

./: .env.example  .gitignore  .instructions.md  PHASE1_PROGRESS.md  PHASE1_TEST_PLAN.md  PRODUCTION_READINESS_SUMMARY.md  README.md  ROUTE_INTEGRATION_COMPLETE.md  TASK_BREAKDOWN.md  package-lock.json  package.json  pyproject.toml  thunai_developer_reference_v1.docx
backend/: .env.example  .eslintrc.json  flyway.conf  package.json
backend/migrations/: V1__initial_schema.sql  V2__add_audit_table.sql  V3__add_privacy_controls.sql
backend/src/: index.js
backend/src/config/: startup.js
backend/src/db/: db.js  redis.js  schema.sql
backend/src/middleware/: audit.js  auth.js  rateLimiter.js  requestId.js
backend/src/routes/: auth.js  drive.js  feedback.js  privacy.js  route.js
backend/src/services/: errorTracker.js  llmService.js  routeScoring.js
backend/src/validation/: schemas.js
backend/tests/: audit.test.js  llmService.test.js  rateLimiter.test.js  routes.test.js  security.test.js  validation.test.js
config/: default.yaml  ivis_dictionary.json
config/profiles/: pilot.yaml  production.yaml
docs/: AI_ROLE_FLOWCHART.md  API.md  ARCHITECTURE.md  FOUNDER_DEMO_BRIEFING.md  FOUNDER_TECHNICAL_DEMO_BRIEFING.md  LOCAL_SETUP_WINDOWS.md  MIGRATIONS.md  OEM_DEMO_GAP_MATRIX.md  PHYSICAL_DEVICE_BRINGUP.md  RUNBOOKS.md  TRS.md  openapi.yaml
docs/ADRs/: ADR-001-stress-index-weights.md  ADR-002-intervention-cooldown.md  ADR-003-speed-gate-threshold.md
edge/: CMakeLists.txt  README.md
edge/src/: crypto_utils.h  intervention_dispatcher.cpp  intervention_dispatcher.h  ivis_engine.cpp  ivis_engine.h  ivis_selftest.cpp  obd_parser.cpp  obd_parser.h  runtime_config.h  stress_index.cpp  stress_index.h
edge/test/: intervention_dispatcher_test.cpp  obd_parser_test.cpp  stress_index_test.cpp  test_intervention_dispatcher.cpp  test_obd_parser.cpp
mobile/: .env.example  .eslintrc.json  app.json  index.js  package.json
mobile/__tests__/: ConfidenceCorridorService.test.js  IVISEngine.test.js  OBDService.test.js  StressIndexService.test.js  SyncService.test.js
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/thunnativetemplate/: MainActivity.kt  MainApplication.kt  ThunSecureRuntimeModule.kt  ThunSecureRuntimePackage.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/src/navigation/: AppNavigator.js
mobile/src/screens/: DriveScreen.js  HomeScreen.js  OnboardingScreen.js  PostDriveScreen.js  PreDriveScreen.js  SettingsScreen.js  TherapistScreen.js
mobile/src/services/: AuthSessionService.js  ConfidenceCorridorService.js  ErrorTracker.js  IVISEngine.js  LocalStorage.js  OBDService.js  PrivacyService.js  RouteScoring.js  SecureKeyManager.js  StressIndexService.js  SyncService.js  TTSService.js  WatchService.js
mobile/src/store/: anxietyProfile.js
mobile/src/utils/: constants.js
scripts/: sync_ivis_dictionary.py
src/thunai/: __init__.py  circuit_breaker.py  cli.py  config.py  engine.py  hardware.py  ivis_dictionary.py  models.py
src/thunai/features/: __init__.py  ivis.py  post_drive.py  pre_drive.py  therapist.py
src/thunai/intelligence/: __init__.py  base.py
src/thunai/intelligence/llm/: __init__.py  anthropic.py  factory.py  gemini.py  openai.py  openai_provider.py  stub.py
src/thunai/intelligence/slm/: __init__.py  factory.py  ollama.py  phi3.py  stub.py
src/thunai/intelligence/vlm/: __init__.py  factory.py  gemini.py  ollama.py  stub.py
src/thunai/interaction/: __init__.py  base.py  elevenlabs.py  sarvam.py  system.py
src/thunai/perception/: __init__.py
tests/: __init__.py  test_circuit_breaker.py  test_config.py  test_engine.py  test_features_extended.py  test_hardware.py  test_ivis_dictionary.py  test_perception.py
tests/features/: __init__.py  test_ivis.py  test_post_drive.py  test_pre_drive.py  test_therapist.py
tests/intelligence/: __init__.py  test_llm.py  test_slm.py
visualization/: app.js  index.html  styles.css
