[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thunai"
version = "0.1.0"
description = "AI-Powered In-Vehicle Intelligence System (IVIS) for Driving Anxiety"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "thun.ai" }]

dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm-gemini = ["google-generativeai>=0.8"]
llm-openai = ["openai>=1.0"]
tts-sarvam = ["requests>=2.31"]
tts-elevenlabs = ["elevenlabs>=1.0"]
perception = [
    "numpy>=1.24",
    "Pillow>=10.2",
    "onnxruntime>=1.16",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
thunai = "thunai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
